ADD 700 common English words

--- a/languages/en/0-1000.csv
+++ b/languages/en/0-1000.csv
@@ -592,7 +592,7 @@ to sit         ,Verb            ,                   ,
 to taste       ,Verb            ,                   ,     
 valley         ,Noun            ,                   ,     
 verb           ,Noun            ,                   ,     
-to watch       ,TV) (verb       ,                   
+to watch       ,TV) (verb       ,                   ,
 wet            ,Noun            ,adj.               ,     
 wood           ,Noun            ,                   ,     
 victim         ,Noun            ,                   ,     
@@ -604,7 +604,7 @@ wave           ,Noun            ,ocean              ,
 wide           ,Noun            ,                   ,     
 world          ,Noun            ,                   ,     
 vowel          ,Noun            ,                   ,     
-we             ,Pronoun         ,                   
+we             ,Pronoun         ,                   ,
 wife           ,Noun            ,                   ,     
 to write       ,Verb            ,                   ,     
 waiter         ,Noun            ,                   ,     
@@ -628,7 +628,7 @@ war            ,Noun            ,                   ,
 week           ,Noun            ,                   ,     
 wing           ,Noun            ,                   ,     
 you            ,Pronoun         ,singular/plural    ,     
-warm           ,Adjective       ,                   
+warm           ,Adjective       ,                   ,
 weight         ,Noun            ,                   ,     
 winter         ,Noun            ,                   ,     
 young          ,Noun            ,                   ,     
