FIX csv missing commas

--- a/languages/en/0-1000.csv
+++ b/languages/en/0-1000.csv
@@ -26,7 +26,7 @@ dot            ,Noun            ,                   ,
 alive          ,Noun            ,                   ,     
 bone           ,Noun            ,                   ,     
 club           ,Noun            ,location           ,     
-down           ,Preposition     ,                   
+down           ,Preposition     ,                   ,
 animal         ,Noun            ,                   ,     
 book           ,Noun            ,                   ,     
 coat           ,Noun            ,                   ,     
@@ -61,7 +61,7 @@ to cook        ,Verb            ,                   ,
 dust           ,Noun            ,                   ,     
 attack         ,Noun            ,                   ,     
 breakfast      ,Noun            ,                   ,     
-cool           ,Adjective       ,                   
+cool           ,Adjective       ,                   ,
 ear            ,Noun            ,                   ,     
 August         ,Noun            ,                   ,     
 bridge         ,Noun            ,                   ,     
@@ -226,7 +226,7 @@ five           ,Noun            ,                   ,
 heat           ,Noun            ,                   ,     
 lemon          ,Noun            ,                   ,     
 movie          ,Noun            ,                   ,     
-flat           ,Adjective       ,                   
+flat           ,Adjective       ,                   ,
 heaven         ,Noun            ,                   ,     
 letter         ,Noun            ,                   ,     
 murder         ,Noun            ,                   ,     
@@ -261,7 +261,7 @@ lip            ,Noun            ,                   ,
 network        ,Noun            ,                   ,     
 forest         ,Noun            ,                   ,     
 hot            ,Noun            ,                   ,     
-to listen      ,to music) (verb ,                   
+to listen      ,to music) (verb ,                   ,
 new            ,Noun            ,                   ,     
 fork           ,Noun            ,                   ,     
 hotel          ,Noun            ,                   ,     
@@ -288,7 +288,7 @@ husband        ,Noun            ,                   ,
 loud           ,Noun            ,                   ,     
 ninety         ,Noun            ,                   ,     
 friend         ,Noun            ,                   ,     
-I              ,Pronoun         ,                   
+I              ,Pronoun         ,                   ,
 to love        ,Verb            ,                   ,     
 no             ,Noun            ,                   ,     
 front          ,Noun            ,                   ,     
