--- a/languages/fr/0-750.csv
+++ b/languages/fr/0-750.csv
@@ -1,4 +1,4 @@
-fr                   ,en             ,Part of Speech ,Notes              ,Related                    ,
+Word                   ,English             ,Part of Speech ,Notes              ,Related                    ,
 le mois d'avril      ,April          ,Noun           ,                   ,                           ,
 le mois d'août       ,August         ,Noun           ,                   ,                           ,
 le décembre          ,December       ,Noun           ,                   ,                           ,
